# legion-koi

./: .gitignore  README.md  pyproject.toml  test_node.py
scripts/: backfill_config.py  backfill_embeddings.py  backfill_entities.py  backfill_koi_tier.py  backfill_pageindex_events.py  browser_backfill.py  browser_purge.py  build_hippo_bridge.py  classify_threads.py  collect_firefox_profiles.sh  create_golden_extractions.py  create_golden_queries.py  detect_cross_references.py  evaluate_extraction.py  evaluate_retrieval.py  fix_chunk_text.py  golden_extractions.jsonl  golden_queries.jsonl  ingest_claude_web.py  ingest_github.py  ingest_transcripts.py  koi_to_hippo.py  migrate_namespaces.py  purge_filtered_messages.py  reset_message_state.py  telegram_hygiene.py  thread_classification_report.txt  tune_alpha.py  youtube-backfill.py
scripts/eval_results/: 2026-03-11_103358.json  2026-03-11_103421.json  2026-03-11_104603.json  2026-03-11_104615.json  2026-03-11_111659.json  2026-03-11_115336.json  2026-03-11_115621.json  2026-03-11_115721.json  2026-03-11_115849.json  2026-03-11_120059.json  2026-03-11_120319.json  2026-03-11_121621.json  2026-03-11_121823.json  2026-03-11_122546.json  2026-03-11_122820.json  2026-03-11_124646.json  2026-03-11_124915.json  2026-03-11_125113.json  2026-03-11_130253.json  2026-03-11_130651.json  (+1 more)
tests/: test_backlog_sensor.py  test_changelog_sensor.py  test_contact_sensor.py  test_events.py  test_extraction.py  test_message_filter.py  test_observability.py  test_plan_sensor.py  test_research_sensor.py  test_resilience.py  test_retrieval.py
(+86 files in other folders)
